--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.51",
+    "@material-ui/core": "^1.3.1",
+    "@material-ui/icons": "^1.1.0",
     "meteor-node-stubs": "^0.4.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1"
