--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@babel/runtime": "^7.0.0-beta.51",
     "@material-ui/core": "^1.3.1",
     "@material-ui/icons": "^1.1.0",
+    "history": "^4.7.2",
     "meteor-node-stubs": "^0.4.1",
     "react": "^16.4.1",
-    "react-dom": "^16.4.1"
+    "react-dom": "^16.4.1",
+    "react-router": "^4.3.1"
   },
   "meteor": {
     "mainModule": {
