--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "meteor-node-stubs": "^0.4.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-router": "^4.3.1"
+    "react-router": "^4.3.1",
+    "simpl-schema": "^1.5.0",
+    "uniforms": "^1.25.0-rc.3",
+    "uniforms-material": "^1.25.0-rc.3"
   },
   "meteor": {
     "mainModule": {
