--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "meteor-node-stubs": "^0.4.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
+    "redux": "^4.0.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "simpl-schema": "^1.5.0",
     "uniforms": "^1.25.0-rc.3",
     "uniforms-material": "^1.25.0-rc.3"
