--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@babel/runtime": "^7.0.0-beta.51",
     "@material-ui/core": "^1.3.1",
     "@material-ui/icons": "^1.1.0",
+    "connected-react-router": "^4.3.0",
     "history": "^4.7.2",
     "meteor-node-stubs": "^0.4.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
+    "react-router-redux": "^4.0.8",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
